--- a/hurray.css
+++ b/hurray.css
@@ -42,14 +42,18 @@
 }
 
 #p1 {
-    font-size: 6rem;
-    font-family: roboto;
+    font-size: 5.9rem;
+    font-family: 'Roboto', sans-serif;
     color: #FFF;
+    letter-spacing: 0.3rem;
+    font-weight: 500;
 }
 
 #p2 {
-    font-size: 2.8rem;
-    font-family: roboto;
+    font-size: 2.1rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    letter-spacing: 0.2rem;
     color: #FFF;
 }
 
@@ -57,9 +61,11 @@ button {
     background-color: #FFF;
     padding: .8rem;
     font-size: 1rem;
-    width: 9.3rem;
+    width: 9.6rem;
+    font-family: 'Roboto', sans-serif;
     outline: none;
+    color: rgb(46, 44, 44);
     border: none;
-    border-radius: 5px;
-    margin-left: 44rem;
+    border-radius: 9px;
+    margin-left: 43rem;
 }
