--- a/style.css
+++ b/style.css
@@ -65,31 +65,78 @@ h2 {
 
 /* Images css */
 
-#stone_img {
-    background-color: white;
-    border-radius: 100%;
-    width: 7rem;
-    object-fit: scale-down;
-    height: 7rem;
-    border: 14px solid #0074B6;
+.images {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    z-index: 2;
+    position: relative;
 }
 
-#scissor_img {
-    background-color: white;
-    border-radius: 100%;
-    object-fit: scale-down;
-    width: 7rem;
-    height: 7rem;
-    border: 14px solid #BD00FF;
+.img1_class {
+    display: flex;
+    gap: 6rem;
 }
 
+#stone_img,
+#scissor_img,
 #paper_img {
     background-color: white;
     border-radius: 100%;
-    width: 7rem;
+    width: 8.2rem;
     object-fit: scale-down;
-    height: 7rem;
-    border: 14px solid rgb(252, 195, 64);
+    height: 8.2rem;
+    border: 1rem solid #0074B6;
+    position: relative;
+    z-index: 3;
+}
+
+#scissor_img {
+    border: 1rem solid #BD00FF;
+}
+
+#paper_img {
+    border: 1rem solid rgb(252, 195, 64);
+}
+
+
+/* LINES */
+
+.lines {
+    display: flex;
+    position: absolute;
+    top: 45%;
+    z-index: 1;
+    flex-direction: column;
+}
+
+.linea {
+    left: 45%;
+    top: 52%;
+}
+
+.line1,
+.line2,
+.line3 {
+    width: 9rem;
+    padding: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.64);
+}
+
+.line3 {
+    transform: rotate(58deg);
+}
+
+.line1 {
+    transform: rotate(-58deg);
+}
+
+.lineb {
+    display: flex;
+    z-index: 5;
+    gap: 3rem;
+    top: 65%;
+    position: absolute;
 }
 
 
@@ -98,9 +145,9 @@ h2 {
 .square_box {
     background-color: #004429;
     display: flex;
-    gap: 3.6rem;
+    gap: 3.4rem;
     margin-top: 0;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-direction: column;
 }
 
@@ -131,6 +178,10 @@ h2 {
     display: flex;
     gap: 1rem;
     background-color: #004429;
+}
+
+.rules_line {
+    margin-top: 0.8rem;
 }
 
 .rules_line>p {
