--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
     margin: 0;
     width: 100;
     box-sizing: border-box;
-    background-color: #89C15E;
     align-items: center;
 }
 
 .container {
     display: flex;
     justify-content: center;
-    margin-top: 6rem;
+    background-color: #89C15E;
+    padding-top: 6rem;
     flex-direction: column;
 }
 
@@ -53,6 +53,7 @@
 
 .score1>p,
 .score2>p {
+    color: #656565;
     font-size: 1.2rem;
     background-color: antiquewhite;
 }
@@ -70,7 +71,6 @@ h2 {
     flex-direction: column;
     gap: 3rem;
     z-index: 2;
-    position: relative;
 }
 
 .img1_class {
@@ -102,17 +102,22 @@ h2 {
 
 /* LINES */
 
+.container2 {
+    margin-top: 5rem;
+    position: relative;
+}
+
 .lines {
     display: flex;
     position: absolute;
-    top: 45%;
+    top: 20%;
+    left: 29%;
     z-index: 1;
     flex-direction: column;
 }
 
 .linea {
-    left: 45%;
-    top: 52%;
+    padding-bottom: 5rem;
 }
 
 .line1,
@@ -134,8 +139,7 @@ h2 {
 .lineb {
     display: flex;
     z-index: 5;
-    gap: 3rem;
-    top: 65%;
+    bottom: -30%;
     position: absolute;
 }
 
@@ -153,8 +157,8 @@ h2 {
 
 .sq {
     background-color: yellow;
-    width: 1rem;
-    padding: 0.5rem;
+    width: 0.8rem;
+    padding: 0.4rem;
 }
 
 .rules>h2 {
@@ -169,6 +173,7 @@ h2 {
     flex-direction: column;
     background-color: #004429;
     width: 21rem;
+    position: relative;
     height: 25rem;
     border-radius: 12px;
     border: 0.5rem solid white;
@@ -182,6 +187,20 @@ h2 {
 
 .rules_line {
     margin-top: 0.8rem;
+}
+
+.cross {
+    position: absolute;
+    background-color: #F00;
+    width: 4rem;
+    height: 4rem;
+    font-size: 2rem;
+    stroke-width: 5px;
+    text-align: center;
+    border-radius: 100%;
+    right: -10%;
+    top: -10%;
+    border: 6px solid white;
 }
 
 .rules_line>p {
